Fix: Docker build issue for frontend and task list box overflow

--- a/frontend/front/src/app/pages/home/home.component.scss
+++ b/frontend/front/src/app/pages/home/home.component.scss
@@ -83,6 +83,11 @@ li {
     display: flex;
     flex-direction: column;
     gap: 0.3rem;
+
+    word-wrap: break-word;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    max-width: 100%;
   }
 
   small {
